test_regress/t/t_constraint_disable_soft_bad.out
%Error: t/t_constraint_disable_soft_bad.v:15:25: syntax error, unexpected ';'
   15 |     disable soft (a + 1);
      |                         ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
